--- a/public/views/aboutme.html
+++ b/public/views/aboutme.html
@@ -1,8 +1,11 @@
-<html>
-    <head>
-        <title> About Alex</title>
-    </head>
-    <body>
-        We need to talk about Alex
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Alex</title>
+</head>
+<body>
+        <h1>I am super badass</h1>
+</body>
 </html>
