Added games file and route

--- a/public/views/software.html
+++ b/public/views/software.html
@@ -40,20 +40,22 @@
 
         <h3>Firefox Privacy Extensions</h3>  
         <ul id="ff-privacy-extensions-list">  
-            <li>DuckDuckGo Privacy Essentials</li>
-            <li>uBlock Origin</li>
-            <li>HTTPS Everywhere</li>
-            <li>Privacy Badger</li>
-            <li>LocalCDN</li>
-            <li>ClearURLs</li>
-            <li>Firefox Multi-Account Containers</li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/duckduckgo-for-firefox/" target="_blank" rel="noreferrer noopener">DuckDuckGo Privacy Essentials</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/ublock-origin/" target="_blank" rel="noreferrer noopener">uBlock Origin</a></li>
+            <li><a href="https://www.eff.org/https-everywhere/" target="_blank" rel="noreferrer noopener">HTTPS Everywhere</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/privacy-badger17/" target="_blank" rel="noreferrer noopener">Privacy Badger</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/decentraleyes/" target="_blank" rel="noreferrer noopener">LocalCDN</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/clearurls/" target="_blank" rel="noreferrer noopener">ClearURLs</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/multi-account-containers/" target="_blank" rel="noreferrer noopener">Firefox Multi-Account Containers</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/noscript/" target="_blank" rel="noreferrer noopener">No Script</a></li>
+            
         </ul>
 
         <h3>Firefox Fun Extensions </h3>
         <ul id="ff-fun-extensions-list">
-            <li>Search by Image</li>
-            <li>Sponsor Block</li>
-            <li>Return Youtube Dislike Button </li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/search_by_image/" target="_blank" rel="noreferrer noopener">Search by Image</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/sponsorblock/" target="_blank" rel="noreferrer noopener">Sponsor Block</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/return-youtube-dislikes/" target="_blank" rel="noreferrer noopener">Return Youtube Dislike Button </li>
         </ul>
 
         <h3>Image Editors/Design Software</h3>
