Added a projects page

--- a/public/views/games.html
+++ b/public/views/games.html
@@ -14,7 +14,7 @@
             <li>Yu-Gi-Oh Master Duel</li>
             <li>Nioh 2</li>
             <li>Rainbow Six Siege</li>
-            <li>Escape From Tarkov</li>
+            <li>Escape From Tarkov (SPT)</li>
             <li>War Thunder</li>
             <li>For Honor</li>
             <li>Lots of Indy Games</li>
