Added StartPage, a security focused proxy browser

--- a/public/views/software.html
+++ b/public/views/software.html
@@ -33,6 +33,7 @@
         <h3>Browsers</h3>
         <ul id="broswers-list">
             <li><a href="https://www.mozilla.org/en-US/firefox/new/" target="_blank" rel="noreferrer noopener">Firefox</a></li>
+            <li><a href="https://www.startpage.com/" target="_blank" rel="noreferrer noopener">StartPage</a></li>
             <li><a href="https://duckduckgo.com/windows" target="_blank" rel="noreferrer noopener">Duck Duck Go</a></li>
             <li><a href="https://mullvad.net/en/browser" target="_blank" rel="noreferrer noopener">Mullvad Browser</a></li>
             <li><a href="https://www.torproject.org/download/" target="_blank" rel="noreferrer noopener">Tor Browser</a></li>
