Finished deployment instrucs, +project idea

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -11,12 +11,13 @@
     <body>
         <h1> Here are some project ideas</h1>
         <ul id="project-ideas list">
-            <li>This website lol</li>
+            <li>This website</li>
             <li>Cellular Automaton</li>
             <li>Tor Hidden Service</li>
             <li>SPT Mod</li>
             <li>Keylogger</li>
             <li>Encryption Software</li>
+            <li>nextjs typescript tailwind app</li>
         </ul>
     </body>
 </html>
