Im not afraid to commit, just to code

--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -18,6 +18,7 @@
             <li>Keylogger</li>
             <li>Encryption Software</li>
             <li>nextjs typescript tailwind app</li>
+            <li>Pokedex App</li>
         </ul>
     </body>
 </html>
