--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,56 @@
-html{
-    background-color: lightgray
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color:lightslategrey;
+
+}
+
+li, a , button{
+    font-family: sans-serif;
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
+}
+
+.logo{
+    cursor: pointer;
+}
+
+.nav_links{
+    list-style:none;
+}
+
+.nav_links li{
+    display: inline-block;
+    padding:0px 20px;
+    
+}
+
+.nav_links li a{
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover{
+    color: cyan;
+}
+
+button{
+    padding: 9px 25px;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover{
+    background-color: rgba(0, 136, 169, .75);
 }
