--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -6,46 +6,50 @@
 
 }
 
-li, a, button{
+li, a, button {
     font-family: sans-serif;
     font-size: 24px;
     color: white;
     text-decoration: none;
 }
 
-header{
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
 }
 
-.logo{
+.logo {
     cursor: pointer;
-    scale: .1;
+    height: 100px;
+    width: 100px;
+
 }
 
-.navbar_links{
+.nav_links {
     list-style:none;
 }
 
-.navbar_links li{
+.nav_links li {
     display: inline-block;
-    padding:0px 20px;
+    padding: 0px 20px;
     
 }
 
-.navbar_links li a{
+.nav_links li a {
+    color:rgb(0, 255, 255);
     transition: all 0.3s ease 0s;
 }
 
-.navbar_links li a:hover{
-    color: cyan;
+.nav_links li a:hover {
+    color: black;
 }
 
-button{
+
+button { 
     padding: 9px 25px;
-    background-color: rgba(0, 136, 169, 1);
+    background-color: rgba(0, 255, 255, .25);
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -53,5 +57,6 @@ button{
 }
 
 button:hover{
-    background-color: rgba(0, 136, 169, .75);
+    background-color: rgba(0, 255, 255, .75);
+    color:black;
 }
