--- a/public/views/aboutme.html
+++ b/public/views/aboutme.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Alex</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Alex</title>
+  <meta name="description" content="A page talking about who I am as a person.">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-        <h1>I am super badass</h1>
+    <header>
+        <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+        <nav>
+          <ul class="nav_links">
+            <li><a href="/aboutme">About Me</a></li>
+            <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/software">Software</a></li>
+            <li><a href="/resources">Resources</a></li>
+            <li><a href="/media">Media</a></li>
+            
+            <!--- 
+              <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+            --->
+          </ul>
+        </nav>
+        <a class="cta" href="#"><button>Contact Me</button></a>
+      </header>
+      <footer>
+        <ul id="cryto-addresses">
+          <div>BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2</div>
+          <div>XMR: 85zBfGyP5hc51kHAG8fCN9Egxdd5S6YMa8CWhYHDcfkXcRjcJdgbmJNCFuaFyoTE9JaJPV5b34iyM4ryFSjTDRWWNJGyoaJ</div>
+          <div>FIL: f410f2fjjjxm7rch3edh7dz3xy7qpa4ia2tf4ubusmli</div>
+        </ul>
+      </footer>
 </body>
 </html>
