--- a/public/views/media.html
+++ b/public/views/media.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vidya Games</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Media Prefrences</title>
+      <meta name="description" content="Media that I enjoy consuming.">
+      <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <header>
+            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+            <nav>
+              <ul class="nav_links">
+                <li><a href="/aboutme">About Me</a></li>
+                <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/software">Software</a></li>
+                <li><a href="/resources">Resources</a></li>
+                <li><a href="/media">Media</a></li>
+                <!--- 
+                  <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+                --->
+              </ul>
+            </nav>
+            <a class="cta" href="#"><button>Contact Me</button></a>
+        </header>
+      
         <h1>Video games that I enjoy playing</h1>
         <ul id="video-games-list">
             <li>Yu-Gi-Oh Master Duel</li>
