--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Portfolio Time</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Project Ideas</title>
+      <meta name="description" content="Idellic project ideas I would love to explore.">
+      <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <header>
+            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+            <nav>
+              <ul class="nav_links">
+                <li><a href="/aboutme">About Me</a></li>
+                <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/software">Software</a></li>
+                <li><a href="/resources">Resources</a></li>
+                <li><a href="/media">Media</a></li>
+                
+                <!--- 
+                  <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+                --->
+              </ul>
+            </nav>
+            <a class="cta" href="#"><button>Contact Me</button></a>
+        </header>
+      
         <h1> Here are some project ideas</h1>
         <ul id="project-ideas list">
-            <li>This website</li>
-            <li>Cellular Automaton</li>
-            <li>Tor Hidden Service</li>
-            <li>SPT Mod</li>
-            <li>Keylogger</li>
-            <li>Encryption Software</li>
-            <li>nextjs typescript tailwind app</li>
-            <li>Pokedex App</li>
+            <li>Speedy Personal Portfolio Site (Node+Express+NGINX)</li>
+            <li>Pokedex Webapp(Using APIs, TypeScript, NextJS, Tailwind)</li>
+            <li>Yu-Gi-Oh Deck Builder (Basically an abstract ORM)</li>
+            <li>Simple Keylogger</li>
+            <li>Metadata Scrubbing Tool</li>
+            <li>Implement Conway's Game of Life</li>
+            <li>Loot Customization Mod for Single Player Tarkov</li>
         </ul>
     </body>
 </html>
