--- a/public/views/resources.html
+++ b/public/views/resources.html
@@ -5,13 +5,32 @@
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Learning Resources</title>
+      <meta name="description" content="Mostly free online resources to learn things.">
+      <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        <header>
+            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+            <nav>
+              <ul class="nav_links">
+                <li><a href="/aboutme">About Me</a></li>
+                <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="/software">Software</a></li>
+                <li><a href="/resources">Resources</a></li>
+                <li><a href="/media">Media</a></li>
+                
+                <!--- 
+                  <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+                --->
+              </ul>
+            </nav>
+            <a class="cta" href="#"><button>Contact Me</button></a>
+          </header>
+      
     </body>
 </html>
