--- a/public/views/software.html
+++ b/public/views/software.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Software List</title>
-        <meta name="description" content="Software I have used and like!">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Software</title>
+        <meta name="description" content="Interesting">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <h1>Based Software</h1>
