Finished link lists, added style guide file

--- a/public/views/media.html
+++ b/public/views/media.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+          <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
             <nav>
               <ul class="nav_links">
                 <li><a href="/aboutme">About Me</a></li>
@@ -32,7 +32,8 @@
             <li>Yu-Gi-Oh Master Duel</li>
             <li>Nioh 2</li>
             <li>Rainbow Six Siege</li>
-            <li>Escape From Tarkov (SPT)</li>
+            <li>Titan Fall 2</li>
+            <li>Escape From Tarkov</li>
         </ul>
     </body>
 </html>
