--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+          <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
             <nav>
               <ul class="nav_links">
                 <li><a href="/aboutme">About Me</a></li>
