--- a/public/views/resources.html
+++ b/public/views/resources.html
@@ -9,12 +9,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Learning Resources</title>
-      <meta name="description" content="Mostly free online resources to learn things.">
+      <meta name="description" content="Online refrence, resources, and practice. Mostly free.">
       <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
         <header>
-            <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+          <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
             <nav>
               <ul class="nav_links">
                 <li><a href="/aboutme">About Me</a></li>
@@ -31,6 +31,73 @@
             </nav>
             <a class="cta" href="#"><button>Contact Me</button></a>
           </header>
-      
+
+          <h3>Educational Resources</h3>
+          <li><a href="https://www.wikipedia.org/" target="_blank" rel="noreferrer noopener">Wikipedia</a></li>
+          <li><a href="https://www.khanacademy.org/" target="_blank" rel="noreferrer noopener">Khan Academy</a></li>
+          <li><a href="https://ocw.mit.edu/" target="_blank" rel="noreferrer noopener">MIT Open Courseware</a></li>
+          <li><a href="https://histography.io/" target="_blank" rel="noreferrer noopener">Histography</a></li>
+          <li><a href="https://www.duolingo.com/" target="_blank" rel="noreferrer noopener">Duolingo</a></li>
+          <li><a href="https://www.typing.com/" target="_blank" rel="noreferrer noopener">Typing.com</a></li>
+
+          
+
+
+          <h3>Software Developer Resources </h3>
+          <ul id="dev-list">
+              <li><a href="https://leetcode.com/" target="_blank" rel="noreferrer noopener">Leet Code</a></li>
+              <li><a href="https://www.freecodecamp.org/" target="_blank" rel="noreferrer noopener">Free Code Camp</a></li>
+              <li><a href="https://www.codecademy.com/" target="_blank" rel="noreferrer noopener">Code Academy</a></li>
+              <li><a href="https://www.w3schools.com/" target="_blank" rel="noreferrer noopener">W3 Schools</a></li>
+              <li><a href="https://www.hackerrank.com/" target="_blank" rel="noreferrer noopener">Hacker Rank</a></li>
+          </ul>
+
+          <h3>Security Resources</h3>
+          <ul id="sec-list">
+              <li><a href="https://nvd.nist.gov/" target="_blank" rel="noreferrer noopener">NIST</a></li>
+              <li><a href="https://www.cisa.gov/known-exploited-vulnerabilities-catalog" target="_blank" rel="noreferrer noopener">CISA</a></li>
+              <li><a href="https://cve.mitre.org/cve/" target="_blank" rel="noreferrer noopener">MITRE</a></li>
+              <li><a href="https://www.tenable.com/cve" target="_blank" rel="noreferrer noopener">Tenable</a></li>
+              <li><a href="https://www.vx-underground.org/" target="_blank" rel="noreferrer noopener">VX Underground</a></li>
+              <li><a href="https://owasp.org/" target="_blank" rel="noreferrer noopener">OWASP</a></li>
+              <li><a href="https://www.hybrid-analysis.com/" target="_blank" rel="noreferrer noopener">Hybrid Analysis</a></li>
+              <li><a href="https://www.virustotal.com/" target="_blank" rel="noreferrer noopener">VirusTotal</a></li>
+              <li><a href="https://haveibeenpwned.com/" target="_blank" rel="noreferrer noopener">Have I Been Pwned</a></li>
+              <li><a href="https://tryhackme.com/" target="_blank" rel="noreferrer noopener">TryHackMe</a></li>
+              <li><a href="https://www.hackthebox.com/" target="_blank" rel="noreferrer noopener">Hack The Box</a></li>
+              <li><a href="https://maldevacademy.com/" target="_blank" rel="noreferrer noopener">Maldev Academy</a></li>
+          </ul>
+
+          <h3>AI Tools</h3>
+          <ul id="ai-list">
+              <li><a href="https://openai.com/chatgpt" target="_blank" rel="noreferrer noopener">ChatGPT</a></li>
+              <li><a href="https://neeva.com/" target="_blank" rel="noreferrer noopener">NeevaAIs</a></li>
+              <li><a href="https://www.midjourney.com/home/" target="_blank" rel="noreferrer noopener">Midjourney</a></li>
+              <li><a href="https://stablediffusionweb.com/" target="_blank" rel="noreferrer noopener">Stable Diffusion</a></li>
+              <li><a href="https://eightify.app/" target="_blank" rel="noreferrer noopener">Eightify</a></li> 
+          </ul>
+  
+          <h3>Useful Websites</h3>
+          <ul id="useful-list">
+              <li><a href="https://www.cloudcraft.co/" target="_blank" rel="noreferrer noopener">Cloud Craft</a></li>
+              <li><a href="https://db-engines.com" target="_blank" rel="noreferrer noopener">DB Engines</a></li>
+              <li><a href="https://www.kaggle.com/" target="_blank" rel="noreferrer noopener">Kaggle</a></li>
+              <li><a href="https://www.eff.org/" target="_blank" rel="noreferrer noopener">Electronic Freedom Frontier</a></li>
+          </ul>
+  
+          <h3>Time Wasters</h3>
+          <ul id="wasting-list">
+              <li><a href="https://twitter.com" target="_blank" rel="noreferrer noopener">Twitter</a></li>
+              <li><a href="https://www.tiktok.com/" target="_blank" rel="noreferrer noopener">TikTok</a></li>
+              <li><a href="https://www.reddit.com/" target="_blank" rel="noreferrer noopener">Reddit</a></li>
+              <li><a href="https://www.theonion.com/" target="_blank" rel="noreferrer noopener">The Onion</a></li>
+              <li><a href="https://hard-drive.net/" target="_blank" rel="noreferrer noopener">Hard Drive Mag</a></li>
+              <li><a href="https://xkcd.com/" target="_blank" rel="noreferrer noopener"></a></li>
+              <li><a href="https://fintel.io/" target="_blank" rel="noreferrer noopener">Fintel</a></li>
+              <li><a href="https://www.quiverquant.com/" target="_blank" rel="noreferrer noopener">QuiverQuant</a></li>
+              <li><a href="https://www.nytimes.com/games/wordle/index.html" target="_blank" rel="noreferrer noopener">Wordle</a></li>
+              <li><a href="https://duelingnexus.com" target="_blank" rel="noreferrer noopener">Yu-Gi-Oh Dueling Nexus</a></li>
+              <li><a href="https://pokemonshowdown.com/" target="_blank" rel="noreferrer noopener">Pokemon Showdown</a></li>
+          </ul>
     </body>
 </html>
