--- a/public/views/aboutme.html
+++ b/public/views/aboutme.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit">
+      <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
         <nav>
           <ul class="nav_links">
             <li><a href="/aboutme">About Me</a></li>
@@ -27,6 +27,20 @@
         </nav>
         <a class="cta" href="#"><button>Contact Me</button></a>
       </header>
+      <h1> About Me</h1>
+      <p>I was born to a hardworking and loving single mother in the Midwest in the late 1990s. I attended primary school in St. Louis and Springfield, Missouri.
+         After graduating from high school, I enrolled at Missouri State University in Springfield, Missouri, where I earned a Bachelor of Science in Computer Science
+         with a minor in Mathematics in 2019. During my time in school, my interests primarily revolved around artificial intelligence and machine learning, particularly
+         unsupervised learning. However, my perspective shifted during my senior year when I took an information assurance class, and I discovered that my true passion lay
+         in cybersecurity. To hone my skills in this field, I embarked on a journey through platforms like TryHackMe and eventually progressed to HackTheBox. While these 
+         experiences were incredibly enjoyable and valuable learning opportunities, I also needed a source of income to cover my expenses. Concurrently, I worked as an intern
+         at a utility company, where I provided support and maintenance for SharePoint sites. This role allowed me to establish strong connections with members of both the IT
+         department and the HR department. Impressed by my performance and dedication, I received a recommendation to transition into a project management role. Initially,
+         I worked as a waterfall project manager. However, I soon realized that the rapidly changing nature of business objectives rendered this approach less effective.
+         As a result, I pursued certification as a Scrum Master. In the subsequent year, I took on the role of a project manager responsible for supporting the production
+         implementation of Workday and the ongoing development of enhancements and integrations. 
+      </p>
+
       <footer>
         <ul id="cryto-addresses">
           <div>BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2</div>
