--- a/public/views/software.html
+++ b/public/views/software.html
@@ -5,11 +5,42 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Software</title>
-        <meta name="description" content="Interesting">
+        <meta name="description" content="Interesting Software">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <h1>Based Software</h1>
+        <header>
+            <a href="/"><img class="logo" src="images/frog_logo.svg" alt="Personal Logo, ribbit"></a>
+                <nav>
+                    <ul class="nav_links">
+                    <li><a href="/aboutme">About Me</a></li>
+                    <li><a href="https://www.github.com/Alex-Wilson">GitHub</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/software">Software</a></li>
+                    <li><a href="/resources">Resources</a></li>
+                    <li><a href="/media">Media</a></li>
+                
+                    <!--- 
+                  <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
+                    --->
+                    </ul>
+                </nav>
+            <a class="cta" href="#"><button>Contact Me</button></a>
+        </header>
+
+        <h1>Interesting Software</h1>
+
+
+        <!---Development Software---->
+        <h1>Developement Focused Software</h1>
+
+        <h3>Hypervisors</h3>
+        <ul id="vm-list">
+            <li><a href="https://www.vmware.com/" target="_blank" rel="noreferrer noopener">VMware</a></li>
+            <li><a href="https://xenproject.org/" target="_blank" rel="noreferrer noopener">Xen</a></li>
+            <li><a href="https://www.virtualbox.org/" target="_blank" rel="noreferrer noopener">Virtual Box</a></li>
+
+        </ul>
 
         <h3>Operating Systems</h3>
         <ul id="os-list">
@@ -22,13 +53,41 @@
             <li><a href="https://www.qubes-os.org/" target="_blank" rel="noreferrer noopener">Qubes</a></li>
         </ul>
 
-        <h3>Hypervisors</h3>
-        <ul id="vm-list">
-            <li><a href="https://www.vmware.com/" target="_blank" rel="noreferrer noopener">VMware</a></li>
-            <li><a href="https://xenproject.org/" target="_blank" rel="noreferrer noopener">Xen</a></li>
-            <li><a href="https://www.virtualbox.org/" target="_blank" rel="noreferrer noopener">Virtual Box</a></li>
-
+        <h3>Programming Languages</h3>
+        <ul id="languages-list">
+            <li><a href="https://go.dev/" target="_blank" rel="noreferrer noopener">Go</a></li>
+            <li><a href="https://isocpp.org/" target="_blank" rel="noreferrer noopener">C++</a></li>
+            <li><a href="https://www.rust-lang.org/" target="_blank" rel="noreferrer noopener">Rust</a></li>
+            <li><a href="https://www.python.org/" target="_blank" rel="noreferrer noopener">Python</a></li>
+            <li><a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer noopener">TypeScript</a></li>
         </ul>
+
+        <h3>Databases</h3>
+        <ul id="databases-list">
+            <li><a href="https://www.mongodb.com/" target="_blank" rel="noreferrer noopener">MongoDB</a></li>
+            <li><a href="https://www.mysql.com/" target="_blank" rel="noreferrer noopener">MySQL</a></li>
+        </ul>
+
+        <h3>Version Control</h3>
+        <ul id="vc-list">
+            <li><a href="https://git-scm.com/" target="_blank" rel="noreferrer noopener">Git</a></li>
+            <li><a href="https://github.com/" target="_blank" rel="noreferrer noopener">GitHub</a></li>
+            <li><a href="https://about.gitlab.com/" target="_blank" rel="noreferrer noopener">GitLab</a></li>
+        </ul>
+
+        <h3>DevOps Tools</h3>
+        <ul id="devops-list">
+            <li><a href="https://kubernetes.io/" target="_blank" rel="noreferrer noopener">Kubernetes</a></li>
+            <li><a href="https://www.docker.com/" target="_blank" rel="noreferrer noopener">Docker</a></li>
+            <li><a href="https://www.chef.io/" target="_blank" rel="noreferrer noopener">Chef</a></li>
+            <li><a href="https://www.jenkins.io/" target="_blank" rel="noreferrer noopener">Jenkins</a></li>
+        </ul>
+
+
+
+        
+        <!---Privacy Focused Softwares-->
+        <h1>Privacy Focused Software</h1>
 
         <h3>Browsers</h3>
         <ul id="broswers-list">
@@ -52,89 +111,6 @@
             
         </ul>
 
-        <h3>Firefox Fun Extensions </h3>
-        <ul id="ff-fun-extensions-list">
-            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/search_by_image/" target="_blank" rel="noreferrer noopener">Search by Image</a></li>
-            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/sponsorblock/" target="_blank" rel="noreferrer noopener">Sponsor Block</a></li>
-            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/return-youtube-dislikes/" target="_blank" rel="noreferrer noopener">Return Youtube Dislike Button </li>
-        </ul>
-
-        <h3>Image Editors/Design Software</h3>
-        <ul id="image-editors-list">
-            <li><a href="https://www.adobe.com/products/photoshop.html" target="_blank" rel="noreferrer noopener">Adobe PhotoShop</a></li>
-            <li><a href="https://www.adobe.com/products/illustrator.html" target="_blank" rel="noreferrer noopener">Adobe Illustrator</a></li>
-            <li><a href="https://www.figma.com/" target="_blank" rel="noreferrer noopener">Figma</a></li>
-            <li><a href="https://www.microsoft.com/en-us/microsoft-365/visio/flowchart-software" target="_blank" rel="noreferrer noopener">Microsoft Visio</a></li>
-        </ul>
-
-        <h3>Note Taking Software</h3>
-        <ul id="notes-list">
-            <li><a href="https://obsidian.md/" target="_blank" rel="noreferrer noopener">Obsidian Notes</a></li>
-            <li><a href="https://www.notion.so/" target="_blank" rel="noreferrer noopener">Notion</a></li>
-            <li><a href="https://www.onenote.com/" target="_blank" rel="noreferrer noopener">Microsoft OneNote</a></li>
-        </ul>
-
-        <h3>Scheduling/Planning Tools</h3>
-        <ul id="planning-tools-list">
-            <li><a href="https://www.airtable.com/" target="_blank" rel="noreferrer noopener">Air Table</a></li>
-            <li><a href="https://clickup.com/" target="_blank" rel="noreferrer noopener">ClickUp</a></li>
-            <li><a href="https://trello.com/" target="_blank" rel="noreferrer noopener">Trello</a></li>
-            <li><a href="https://www.atlassian.com/jira" target="_blank" rel="noreferrer noopener">Jira</a></li>
-            <li><a href="https://www.projectmanager.com/" target="_blank" rel="noreferrer noopener">ProjectManager</a></li>
-            <li><a href="https://tasks.office.com/" target="_blank" rel="noreferrer noopener">Microsoft Planner</a></li>
-            <li><a href="https://www.microsoft.com/en-us/microsoft-365/project/project-management-software" target="_blank" rel="noreferrer noopener">Microsoft Project</a></li>
-
-        </ul>
-
-        <h3>Spreadsheet Tools</h3>
-        <ul id="spreadsheets-list">
-            <li><a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank" rel="noreferrer noopener">Excel</a></li>
-            <li><a href="https://www.google.com/sheets/about/" target="_blank" rel="noreferrer noopener">Sheets</a></li>
-        </ul>
-
-        <h3>Programming Languages</h3>
-        <ul id="languages-list">
-            <li><a href="https://go.dev/" target="_blank" rel="noreferrer noopener">Go</a></li>
-            <li><a href="https://isocpp.org/" target="_blank" rel="noreferrer noopener">C++</a></li>
-            <li><a href="https://www.rust-lang.org/" target="_blank" rel="noreferrer noopener">Rust</a></li>
-            <li><a href="https://www.python.org/" target="_blank" rel="noreferrer noopener">Python</a></li>
-            <li><a href="https://www.typescriptlang.org/" target="_blank" rel="noreferrer noopener">TypeScript</a></li>
-        </ul>
-
-        <h3>Databases***</h3>
-        <ul id="databases-list">
-            <li><a href="https://www.mongodb.com/" target="_blank" rel="noreferrer noopener">MongoDB</a></li>
-        </ul>
-
-        <h3>Version Control</h3>
-        <ul id="version-control-list">
-            <li><a href="https://git-scm.com/" target="_blank" rel="noreferrer noopener">Git</a></li>
-            <li><a href="https://github.com/" target="_blank" rel="noreferrer noopener">GitHub</a></li>
-            <li><a href="https://about.gitlab.com/" target="_blank" rel="noreferrer noopener">GitLab</a></li>
-        </ul>
-
-        <h3>Dev Refrence/Practice Sites</h3>
-        <ul id="dev-rp-list">
-            <li><a href="https://www.w3schools.com/" target="_blank" rel="noreferrer noopener">W3 Schools</a></li>
-            <li><a href="https://www.freecodecamp.org/" target="_blank" rel="noreferrer noopener">Free Code Camp</a></li>
-            <li><a href="https://leetcode.com/" target="_blank" rel="noreferrer noopener">Leet Code</a></li>
-            <li><a href="https://www.hackerrank.com/" target="_blank" rel="noreferrer noopener">Hacker Rank</a></li>
-        </ul>
-
-        <h3>VPN Services</h3>
-        <ul id="vpn-list">
-            <li><a href="https://www.mozilla.org/en-US/products/vpn/" target="_blank" rel="noreferrer noopener">Mozilla</a></li>
-            <li><a href="https://protonvpn.com/" target="_blank" rel="noreferrer noopener">Proton</a></li>
-            <li><a href="https://mullvad.net/en" target="_blank" rel="noreferrer noopener">Mullvad</a></li>
-        </ul>
-
-        <h3>Password Managers</h3>
-        <ul id="password-managers-list">
-            <li><a href="https://1password.com/" target="_blank" rel="noreferrer noopener">1Password</a></li>
-            <li><a href="https://bitwarden.com/" target="_blank" rel="noreferrer noopener">Bitwarden</a></li>
-            <li><a href="https://keepassxc.org/" target="_blank" rel="noreferrer noopener"></a>KeyPassXC</li>
-        </ul>
-
         <h3>Gerneral Security Tools</h3>
         <ul id="security-tools-list">
             <li><a href="https://www.wireshark.org/" target="_blank" rel="noreferrer noopener">Wireshark</a></li>
@@ -150,26 +126,24 @@
             
         </ul>
 
-        <h3>Security Refrence/Practice  Sites</h3>
-        <ul id="security-rp-list">
-            <li><a href="https://nvd.nist.gov/" target="_blank" rel="noreferrer noopener">NIST</a></li>
-            <li><a href="" target="_blank" rel="noreferrer noopener">CISA</a></li>
-            <li><a href="https://cve.mitre.org/cve/" target="_blank" rel="noreferrer noopener">MITRE</a></li>
-            <li><a href="https://www.tenable.com/cve" target="_blank" rel="noreferrer noopener">Tenable</a></li>
-            <li><a href="https://owasp.org/" target="_blank" rel="noreferrer noopener">OWASP</a></li>
-            <li><a href="https://www.vx-underground.org/" target="_blank" rel="noreferrer noopener">VX Underground</a></li>
-            <li><a href="https://haveibeenpwned.com/" target="_blank" rel="noreferrer noopener">Have I Been Pwned</a></li>
-            <li><a href="https://maldevacademy.com/" target="_blank" rel="noreferrer noopener">Maldev Academy</a></li>
-            <li><a href="https://www.virustotal.com/" target="_blank" rel="noreferrer noopener">VirusTotal</a></li>
-            <li><a href="https://www.hybrid-analysis.com/" target="_blank" rel="noreferrer noopener">Hybrid Analysis</a></li>
-            <li><a href="https://www.hackthebox.com/" target="_blank" rel="noreferrer noopener">Hack The Box</a></li>
-            <li><a href="https://tryhackme.com/" target="_blank" rel="noreferrer noopener">TryHackMe</a></li>
-        </ul>
-
         <h3>Encrpyion Tools</h3>
         <ul id="enc-tools-list">
             <li><a href="https://veracrypt.fr/en/Home.html" target="_blank" rel="noreferrer noopener">VeraCrpyt</a></li>
             <li><a href="https://learn.microsoft.com/en-us/windows/security/operating-system-security/data-protection/bitlocker/" target="_blank" rel="noreferrer noopener">BitLocker</a></li>
+        </ul>
+
+        <h3>Password Managers</h3>
+        <ul id="pwd-manager-list">
+            <li><a href="https://1password.com/" target="_blank" rel="noreferrer noopener">1Password</a></li>
+            <li><a href="https://bitwarden.com/" target="_blank" rel="noreferrer noopener">Bitwarden</a></li>
+            <li><a href="https://keepassxc.org/" target="_blank" rel="noreferrer noopener"></a>KeyPassXC</li>
+        </ul>
+
+        <h3>VPN Services</h3>
+        <ul id="vpn-list">
+            <li><a href="https://www.mozilla.org/en-US/products/vpn/" target="_blank" rel="noreferrer noopener">Mozilla</a></li>
+            <li><a href="https://protonvpn.com/" target="_blank" rel="noreferrer noopener">Proton</a></li>
+            <li><a href="https://mullvad.net/en" target="_blank" rel="noreferrer noopener">Mullvad</a></li>
         </ul>
 
         <h3>Encrypted Messengers</h3>
@@ -180,42 +154,64 @@
         </ul>
 
         <h3>Crypto Currencies</h3>
-        <ul id="cool-sites-list">
+        <ul id="crypto-list">
             <li><a href="https://bitcoin.org/en/" target="_blank" rel="noreferrer noopener">BitCoin</a></li>
             <li><a href="https://ethereum.org/en/" target="_blank" rel="noreferrer noopener">Ethereum</a></li>
             <li><a href="https://www.getmonero.org/" target="_blank" rel="noreferrer noopener">Monero</a></li>
             <li><a href="https://filecoin.io/" target="_blank" rel="noreferrer noopener">FileCoin</a></li>
         </ul>
 
-        <h3>DevOps Tools</h3>
-        <ul id="devops-tools-list">
-            <li><a href="https://kubernetes.io/" target="_blank" rel="noreferrer noopener">Kubernetes</a></li>
-            <li><a href="https://www.docker.com/" target="_blank" rel="noreferrer noopener">Docker</a></li>
-            <li><a href="https://www.chef.io/" target="_blank" rel="noreferrer noopener">Chef</a></li>
-            <li><a href="https://www.jenkins.io/" target="_blank" rel="noreferrer noopener">Jenkins</a></li>
+
+
+
+        <!--- Productivity Software-->
+        <h1>Productivity Focused Software</h1>
+
+        <h3>Scheduling/Planning Tools</h3>
+        <ul id="planning-list">
+            <li><a href="https://www.airtable.com/" target="_blank" rel="noreferrer noopener">Air Table</a></li>
+            <li><a href="https://clickup.com/" target="_blank" rel="noreferrer noopener">ClickUp</a></li>
+            <li><a href="https://trello.com/" target="_blank" rel="noreferrer noopener">Trello</a></li>
+            <li><a href="https://www.atlassian.com/jira" target="_blank" rel="noreferrer noopener">Jira</a></li>
+            <li><a href="https://www.projectmanager.com/" target="_blank" rel="noreferrer noopener">ProjectManager</a></li>
+            <li><a href="https://tasks.office.com/" target="_blank" rel="noreferrer noopener">Microsoft Planner</a></li>
+            <li><a href="https://www.microsoft.com/en-us/microsoft-365/project/project-management-software" target="_blank" rel="noreferrer noopener">Microsoft Project</a></li>
+
         </ul>
 
-        <h3>AI Tools</h3>
-        <ul id="ai-list">
-            <li><a href="https://openai.com/chatgpt" target="_blank" rel="noreferrer noopener">ChatGPT</a></li>
-            <li><a href="https://neeva.com/" target="_blank" rel="noreferrer noopener">NeevaAIs</a></li>
-            <li><a href="https://www.midjourney.com/home/" target="_blank" rel="noreferrer noopener">Midjourney</a></li>
-            <li><a href="https://stablediffusionweb.com/" target="_blank" rel="noreferrer noopener">Stable Diffusion</a></li>
-            <li><a href="https://eightify.app/" target="_blank" rel="noreferrer noopener">Eightify</a></li> 
+        <h3>Spreadsheet Tools</h3>
+        <ul id="spreadsheet-list">
+            <li><a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank" rel="noreferrer noopener">Excel</a></li>
+            <li><a href="https://www.google.com/sheets/about/" target="_blank" rel="noreferrer noopener">Sheets</a></li>
         </ul>
 
-        <h3>C00L $1T35</h3>
-        <ul id="cool-sites-list">
-            <li><a href="https://www.cloudcraft.co/" target="_blank" rel="noreferrer noopener">Cloud Craft</a></li>
-            <li><a href="https://db-engines.com" target="_blank" rel="noreferrer noopener">DB Engines</a></li>
-            <li><a href="https://downdetector.com/" target="_blank" rel="noreferrer noopener">Down Detector</a></li>
-            Kaggle
-            Fintel
-            QuiverQuant
-            EFF
-            The Onion
-            Hard Drive Mag
+        <h3>Note Taking Software</h3>
+        <ul id="notes-list">
+            <li><a href="https://obsidian.md/" target="_blank" rel="noreferrer noopener">Obsidian Notes</a></li>
+            <li><a href="https://www.notion.so/" target="_blank" rel="noreferrer noopener">Notion</a></li>
+            <li><a href="https://www.onenote.com/" target="_blank" rel="noreferrer noopener">Microsoft OneNote</a></li>
+        </ul>
 
+        <h3>Image Editors/Design Software</h3>
+        <ul id="image-editor-list">
+            <li><a href="https://inkscape.org/" target="_blank" rel="noreferrer noopener">InkScape</a></li>
+            <li><a href="https://www.adobe.com/products/photoshop.html" target="_blank" rel="noreferrer noopener">Adobe PhotoShop</a></li>
+            <li><a href="https://www.adobe.com/products/illustrator.html" target="_blank" rel="noreferrer noopener">Adobe Illustrator</a></li>
+            <li><a href="https://www.figma.com/" target="_blank" rel="noreferrer noopener">Figma</a></li>
+            <li><a href="https://www.microsoft.com/en-us/microsoft-365/visio/flowchart-software" target="_blank" rel="noreferrer noopener">Microsoft Visio</a></li>
+        </ul>
+        
+        
+
+        
+        <!---Just for Fun-->
+        <h1>Non-Essential FireFox Extensions</h1>
+
+        <h3>Firefox Fun Extensions </h3>
+        <ul id="ff-fun-extensions-list">
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/search_by_image/" target="_blank" rel="noreferrer noopener">Search by Image</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/sponsorblock/" target="_blank" rel="noreferrer noopener">Sponsor Block</a></li>
+            <li><a href="https://addons.mozilla.org/en-US/firefox/addon/return-youtube-dislikes/" target="_blank" rel="noreferrer noopener">Return Youtube Dislike Button </li>
         </ul>
         
     </body>
