--- a/public/views/aboutme.pug
+++ b/public/views/aboutme.pug
@@ -1,51 +1,27 @@
-doctype html
-head
-  meta(charset='UTF-8')
-  meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title About Alex
-  meta(name='description' content='A page talking about who I am as a person.')
-  link(rel='stylesheet' href='/css/style.css')
-  script(src='/js/index.js' defer='')
-header
-  a(href='/')
-    img.logo(src='images/frog_logo.svg' alt='Personal Logo, ribbit')
-  nav
-    ul.nav_links
-      li
-        a(href='/aboutme') About Me
-      li
-        a(href='https://www.github.com/Alex-Wilson') GitHub
-      li
-        a(href='/projects') Projects
-      li
-        a(href='/software') Software
-      li
-        a(href='/resources') Resources
-      li
-        a(href='/media') Media
-      //
-        -
-        <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
-        -
-  a.cta(href='#')
-    button#contact-me-button Contact Me
-h1  About Me
-p
-  | I was born to a hardworking and loving single mother in the Midwest in the late 1990s. I attended primary school in St. Louis and Springfield, Missouri.
-  | After graduating from high school, I enrolled at Missouri State University in Springfield, Missouri, where I earned a Bachelor of Science in Computer Science
-  | with a minor in Mathematics in 2019. During my time in school, my interests primarily revolved around artificial intelligence and machine learning, particularly
-  | unsupervised learning. However, my perspective shifted during my senior year when I took an information assurance class, and I discovered that my true passion lay
-  | in cybersecurity. To hone my skills in this field, I embarked on a journey through platforms like TryHackMe and eventually progressed to HackTheBox. While these
-  | experiences were incredibly enjoyable and valuable learning opportunities, I also needed a source of income to cover my expenses. Concurrently, I worked as an intern
-  | at a utility company, where I provided support and maintenance for SharePoint sites. This role allowed me to establish strong connections with members of both the IT
-  | department and the HR department. Impressed by my performance and dedication, I received a recommendation to transition into a project management role. Initially,
-  | I worked as a waterfall project manager. However, I soon realized that the rapidly changing nature of business objectives rendered this approach less effective.
-  | As a result, I pursued certification as a Scrum Master. In the subsequent year, I took on the role of a project manager responsible for supporting the production
-  | implementation of Workday and the ongoing development of enhancements and integrations.
-footer
-  ul#cryto-addresses
-    div BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2
-    div
-      | XMR: 85zBfGyP5hc51kHAG8fCN9Egxdd5S6YMa8CWhYHDcfkXcRjcJdgbmJNCFuaFyoTE9JaJPV5b34iyM4ryFSjTDRWWNJGyoaJ
-    div FIL: f410f2fjjjxm7rch3edh7dz3xy7qpa4ia2tf4ubusmli
+extends layout.pug 
+
+block header
+    title About Alex
+    meta(name='description' content='A page talking about who I am as a person.')
+
+block content_area
+        h1  About Me
+        p
+        | I was born to a hardworking and loving single mother in the Midwest in the late 1990s. I attended primary school in St. Louis and Springfield, Missouri.
+        | After graduating from high school, I enrolled at Missouri State University in Springfield, Missouri, where I earned a Bachelor of Science in Computer Science
+        | with a minor in Mathematics in 2019. During my time in school, my interests primarily revolved around artificial intelligence and machine learning, particularly
+        | unsupervised learning. However, my perspective shifted during my senior year when I took an information assurance class, and I discovered that my true passion lay
+        | in cybersecurity. To hone my skills in this field, I embarked on a journey through platforms like TryHackMe and eventually progressed to HackTheBox. While these
+        | experiences were incredibly enjoyable and valuable learning opportunities, I also needed a source of income to cover my expenses. Concurrently, I worked as an intern
+        | at a utility company, where I provided support and maintenance for SharePoint sites. This role allowed me to establish strong connections with members of both the IT
+        | department and the HR department. Impressed by my performance and dedication, I received a recommendation to transition into a project management role. Initially,
+        | I worked as a waterfall project manager. However, I soon realized that the rapidly changing nature of business objectives rendered this approach less effective.
+        | As a result, I pursued certification as a Scrum Master. In the subsequent year, I took on the role of a project manager responsible for supporting the production
+        | implementation of Workday and the ongoing development of enhancements and integrations.
+        footer
+        ul#cryto-addresses
+            div BTC: bc1qawuzvcv5qpkduzuxy4v9zl82s4amlw2aseqtm2
+            div
+            | XMR: 85zBfGyP5hc51kHAG8fCN9Egxdd5S6YMa8CWhYHDcfkXcRjcJdgbmJNCFuaFyoTE9JaJPV5b34iyM4ryFSjTDRWWNJGyoaJ
+            div FIL: f410f2fjjjxm7rch3edh7dz3xy7qpa4ia2tf4ubusmli
+
