--- a/public/views/index.pug
+++ b/public/views/index.pug
@@ -1,36 +1,11 @@
-doctype html
-head
-  meta(charset='UTF-8')
-  meta(http-equiv='X-UA-Compatible' content='IE=edge')
-  meta(name='viewport' content='width=device-width, initial-scale=1.0')
-  title Alex Wilson&apos;s Own Site
-  meta(name='description' content='')
-  link(rel='stylesheet' href='/css/style.css')
-  script(src='/js/index.js' defer='')
-header
-  a(href='/')
-    img.logo(src='images/frog_logo.svg' alt='Personal Logo, ribbit')
-  nav
-    ul.nav_links
-      li
-        a(href='/aboutme') About Me
-      li
-        a(href='https://www.github.com/Alex-Wilson') GitHub
-      li
-        a(href='/projects') Projects
-      li
-        a(href='/software') Software
-      li
-        a(href='/resources') Resources
-      li
-        a(href='/media') Media
-      //
-        -
-        <li><a href="https://www.linkedin.com/in/alex-wilson-3021a5257">LinkedIn</a></li>
-        -
-  a.cta(href='#')
-    button#contact-me-button Contact Me
-header
-  h1  Welcome to my website!
-  p
-    | This is a website that I use to share things I enjoy, exemplify my technical abilities, and establish myself as a website owner.
+extends layout.pug 
+
+block header
+    title Alex's Homepage
+    meta(name='description' content='A page talking about who I am as a person.')
+
+block content_area
+    header
+    h1 Welcome to my website!
+    p This is a website that I use to share things I enjoy, exemplify my technical abilities, and establish myself as a website owner.
+
