--- a/public/views/media.pug
+++ b/public/views/media.pug
@@ -1,15 +1,15 @@
 extends layout.pug 
 
 block header
-    title Media Prefrences
+    title Video Games
     meta(name='description' content='Media that I enjoy consuming.')
 
-
 block content_area
-    h1 Video games that I enjoy
+    h1 Favorite Video Games
     ul#video-games-list
         li Yu-Gi-Oh Master Duel
         li Nioh 2
         li Rainbow Six Siege
         li Titan Fall 2
         li Escape From Tarkov
+
