--- a/public/views/projects.pug
+++ b/public/views/projects.pug
@@ -5,9 +5,9 @@ block header
     meta(name='description' content='Idellic project ideas I would love to explore.')
 
 block content_area
-    h1  Here are some project ideas
-        ul(id='project-ideas list')
-        li Speedy Personal Portfolio Site (Node+Express+NGINX)
+    h1  Project Ideas
+    ul#project-ideas-list
+        li Personal Portfolio Site (Node+Express+NGINX)
         li Pokedex Webapp(Using APIs, TypeScript, NextJS, Tailwind)
         li Yu-Gi-Oh Deck Builder (Basically an abstract ORM)
         li Simple Keylogger
