--- a/public/views/software.pug
+++ b/public/views/software.pug
@@ -5,7 +5,6 @@ block header
     meta(name='description' content='Interesting Software')
 
 block content_area
-    h1 Interesting Software
     // -Development Software--
     h1 Developement Focused Software
     h3 Hypervisors
@@ -135,8 +134,7 @@ block content_area
     li
         a(href='https://bitwarden.com/' target='_blank' rel='noreferrer noopener') Bitwarden
     li
-        a(href='https://keepassxc.org/' target='_blank' rel='noreferrer noopener')
-        | KeyPassXC
+        a(href='https://keepassxc.org/' target='_blank' rel='noreferrer noopener') KeyPassXC
     h3 VPN Services
     ul#vpn-list
     li
